k8s/jellyfin/jellyfin-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app: jellyfin
spec:
  serviceName: jellyfin
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - k8s-worker-01
      containers:
      - name: jellyfin
        image: jellyfin/jellyfin:10.11.11
        ports:
        - containerPort: 8096
          name: http
        resources:
          requests:
            cpu: 10m
            memory: 2Gi
          limits:
            memory: 2Gi
        volumeMounts:
        - name: jellyfin-data
          mountPath: /config
        - name: jellyfin-media
          mountPath: /media
        startupProbe:
          httpGet:
            path: /health
            port: 8096
          periodSeconds: 10
          timeoutSeconds: 10
          failureThreshold: 30
        livenessProbe:
          httpGet:
            path: /health
            port: 8096
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health
            port: 8096
          periodSeconds: 10
          timeoutSeconds: 10
          failureThreshold: 3
      volumes:
      - name: jellyfin-data
        persistentVolumeClaim:
          claimName: jellyfin-data-local-pvc
      - name: jellyfin-media
        persistentVolumeClaim:
          claimName: jellyfin-shared-media-pvc
