k8s/jellyfin/jellyfin-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-route
  namespace: jellyfin
  annotations:
    external-dns.alpha.kubernetes.io/hostname: crunchyroll.ee
spec:
  parentRefs:
    - name: traefik-public-gateway
      namespace: traefik
  hostnames:
    - crunchyroll.ee
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jellyfin
          port: 8096
